Fixing onboard experience on small browser widths

--- a/app/assets/stylesheets/overrides.css
+++ b/app/assets/stylesheets/overrides.css
@@ -4,13 +4,10 @@
 }
 
 .shepherd-step {
-  z-index:999;
+  max-width: 180px !important;
+  z-index: 999 !important;
 }
 
-.shepherd-element.shepherd-theme-arrows .shepherd-content {
-  width: 400px;
-  max-width: 100%;
-}
 .shepherd-element.shepherd-theme-arrows .shepherd-content a {
   color: inherit;
 }
